ci: trigger release workflow on tag push only
- Remove branch-specific triggers for push and pull_request events
- Add tag-based trigger for release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,11 +2,8 @@ name: Build and Release APKs
 
 on:
   push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+    tags:
+      - v*.*.*
 
 jobs:
   release:
