--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   ambient_light: ^0.1.2
   noise_meter: ^5.0.2
   shared_preferences: ^2.2.2
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -47,7 +48,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-
+ 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
