feat(main): add quick actions support for turning on power
- Add quick actions package to enable home screen shortcuts
- Implement turn on power functionality via shortcut
- Update MainScreen to handle shortcut actions
- Modify HomePage to include turnOn method for power control

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   noise_meter: ^5.0.2
   shared_preferences: ^2.2.2
   url_launcher: ^6.3.1
+  quick_actions: ^1.1.0
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
