--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   shared_preferences: ^2.2.2
   url_launcher: ^6.3.1
   quick_actions: ^1.1.0
-  geolocator: ^14.0.0
+  location: ^8.0.0
   google_fonts: ^6.2.1
 
 dev_dependencies:
